--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
@@ -67,7 +67,7 @@
                 *ngIf="element.numeroSemana !== primeraSemana && element.verEditarBitacora === true"
                 [routerLink]="[ 'consultarEditarBitacora', element.contratacionProyectoId ]"
                 [disabled]="permisos.tienePermisoEditar === false">
-                Consultar/Editar bitacora
+                Consultar/Editar bitácora
         </button>
         <button mat-raised-button
                 color="accent" 
