--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-validar-avance-semanal/tabla-validar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-validar-avance-semanal/tabla-validar-avance-semanal.component.html
@@ -71,7 +71,7 @@
                         class="btn-table"
                         *ngIf="element.numeroSemana !== primeraSemana || estadoAvanceSemanal !== undefined && element.estadoSeguimientoSemanalCodigo !== estadoAvanceSemanal.enviadoPorVerificacion.codigo"
                         [routerLink]="[ 'consultarBitacora', element.contratacionProyectoId ]">
-                        Consultar bitacora
+                        Consultar bitácora
                 </button>
                 <button mat-raised-button
                         color="accent" 
