--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-obra/ver-detalle-solic-nov-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-obra/ver-detalle-solic-nov-obra.component.html
@@ -164,10 +164,7 @@
                   <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo;"> {{ motivo.nombreMotivo}}, </section> 
               
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
-                <section 
-                        [innerHTML]="descripcion.resumenJustificacion"
-                        style="margin-left: 2em"
-                ></section>
+                <section class="text-justify" [innerHTML]="descripcion.resumenJustificacion"></section>
               <mat-card-title class="header-card--text sub-text" *ngIf="descripcion.tipoNovedadCodigo == '4'">
                 Plazo solicitado
               </mat-card-title>
@@ -183,18 +180,15 @@
                 <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index;">
                   <h3> <strong> CLAUSULA </strong> {{ i + 1 }} </h3>
                   <p><strong>Cláusula a modificar: </strong> </p>
-                  <section [innerHTML]="clausula.clausulaAmodificar" style="margin-left: 2em"></section>
+                  <section class="text-justify" [innerHTML]="clausula.clausulaAmodificar"></section>
                   <p><strong>Ajuste solicitado a la cláusula: </strong> </p>
-                  <section [innerHTML]="clausula.ajusteSolicitadoAclausula" style="margin-left: 2em"></section>
+                  <section class="text-justify" [innerHTML]="clausula.ajusteSolicitadoAclausula"></section>
                 </section>
               </section>
 
               <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> {{ descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}</p>
               <p><strong>Concepto técnico: </strong></p>
-              <section 
-                        [innerHTML]="descripcion.conceptoTecnico"
-                        style="margin-left: 2em"
-                ></section>
+              <section class="text-justify" [innerHTML]="descripcion.conceptoTecnico"></section>
               <p><strong>Fecha concepto técnico: </strong> {{ descripcion.fechaConcepto | date: 'dd/MM/yyyy' }}</p>
               <p><strong>Número de radicado en FFIE de solicitud: </strong> {{ descripcion.numeroRadicado }}</p>
             </mat-card-content>
@@ -251,10 +245,7 @@
         </strong>
         Sí
       </p>
-      <section 
-                  [innerHTML]="novedad.observacionApoyo.observaciones"
-                  style="margin-left: 2em"
-          ></section>
+      <section class="text-justify" [innerHTML]="novedad.observacionApoyo.observaciones"></section>
     </mat-card-content>
   </mat-card>
 
@@ -272,11 +263,7 @@
         </strong>
       </p>
       <div>
-          <section 
-            [innerHTML]="novedad.causaRechazo"
-            style="margin-left: 2em"
-            
-    ></section>
+          <section class="text-justify" [innerHTML]="novedad.causaRechazo"></section>
       </div>
     </mat-card-content>
   </mat-card>
@@ -300,11 +287,7 @@
           </strong>
           Sí
         </p>
-        <section 
-                        [innerHTML]="novedad.observacionDevolucion.observaciones"
-                        style="margin-left: 2em"
-                        
-                ></section>
+        <section class="text-justify" [innerHTML]="novedad.observacionDevolucion.observaciones"></section>
       </mat-card-content>
     </mat-card>
   </div>
