--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
@@ -163,15 +163,15 @@
                 motivo.nombreMotivo}}, </section>
 
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
-              <section [innerHTML]="descripcion.resumenJustificacion" style="margin-left: 2em"></section>
+              <section  class="text-justify"[innerHTML]="descripcion.resumenJustificacion"></section>
 
 
               <mat-card-title class="header-card--text sub-text" *ngIf="descripcion.tipoNovedadCodigo == '4'">
                 Plazo solicitado
               </mat-card-title>
-              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Meses: </strong> {{
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>Plazo adicional meses: </strong> {{
                 descripcion.plazoAdicionalMeses }}</p>
-              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Días: </strong> {{
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>Plazo adicional días: </strong> {{
                 descripcion.plazoAdicionalDias }}</p>
 
 
@@ -188,7 +188,7 @@
               <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> {{
                 descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}</p>
               <p><strong>Concepto técnico: </strong></p>
-              <section [innerHTML]="descripcion.conceptoTecnico" style="margin-left: 2em"></section>
+              <section class="text-justify" [innerHTML]="descripcion.conceptoTecnico"></section>
               <p><strong>Fecha concepto técnico: </strong> {{ descripcion.fechaConcepto | date: 'dd/MM/yyyy' }}</p>
               <p><strong>Número de radicado en FFIE de solicitud: </strong> {{ descripcion.numeroRadicado }}</p>
             </mat-card-content>
@@ -245,7 +245,7 @@
           </strong>
           Sí
         </p>
-        <section [innerHTML]="novedad.observacionDevolucion.observaciones" style="margin-left: 2em"></section>
+        <section class="text-justify" [innerHTML]="novedad.observacionDevolucion.observaciones"></section>
       </mat-card-content>
     </mat-card>
   </div>
