--- a/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
@@ -51,7 +51,7 @@
   }
   .ql-editor {
     color: $mainColor !important;
-    padding: 0 1em;
+    padding: 0 1.7em 0 0;
 
     * {
       color: $mainColor !important;
