--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
@@ -5,7 +5,7 @@
     </a>
   </div>
   <h1 class="title-menu--h1">
-    Ver bitacora registro de seguimiento diario {{ proyecto.llaveMen }}
+    Ver bitácora registro de seguimiento diario {{ proyecto.llaveMen }}
   </h1>
   <p class="colorMainColor mt-05em mb-2em">
     <span class="mx-1em">Fecha de último reporte:
