--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -16,7 +16,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Fecha de solicitud de la novedad
       </th>
-      <td mat-cell *matCellDef="let element"><b>{{element.fechaSolictud | date: 'dd/MM/yyyy'}}</b></td>
+      <td mat-cell *matCellDef="let element"><b>{{element.fechaSolictud}}</b></td>
     </ng-container>
 
     <!-- numeroSolicitud Column -->
