--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -14,7 +14,7 @@
     <!-- fechaSolicitud Column -->
     <ng-container matColumnDef="fechaSolictud">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de solicitud de la novedad</th>
-      <td mat-cell *matCellDef="let element"><b>{{element.fechaSolictud | date: 'dd/MM/yyyy'}}</b></td>
+      <td mat-cell *matCellDef="let element"><b>{{element.fechaSolictud}}</b></td>
     </ng-container>
 
     <!-- numeroSolicitud Column -->
