--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/tabla-verificar-avance-semanal/tabla-verificar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/tabla-verificar-avance-semanal/tabla-verificar-avance-semanal.component.html
@@ -71,7 +71,7 @@
                     class="btn-table"
                     *ngIf="element.numeroSemana !== primeraSemana"
                     [routerLink]="[ 'consultarBitacora', element.contratacionProyectoId ]">
-                    Consultar bitacora
+                    Consultar bitácora
             </button>
             <button mat-raised-button
                     color="accent" 
