--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -12,11 +12,11 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- fecha Column -->
-    <ng-container matColumnDef="fecha">
+    <ng-container matColumnDef="fechaSolictud">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Fecha de solicitud de la novedad
       </th>
-      <td mat-cell *matCellDef="let element"><b>{{element.fechaSolictud | date: 'dd/MM/yyyy'}}</b></td>
+      <td mat-cell *matCellDef="let element"><b>{{element.fechaSolictud}}</b></td>
     </ng-container>
 
     <!-- numeroSolicitud Column -->
